--- a/Trade Mart/src/components/LandingPage/SignIn/SignIn.css
+++ b/Trade Mart/src/components/LandingPage/SignIn/SignIn.css
@@ -210,7 +210,6 @@ form :is(p, label) a:hover,
     content: "";
     position: absolute;
     width: 300%;
-    height: 190%;
     background-color: var(--white-color);
     border-radius: 50%;
     transform: translate3d(-27%, 21%, 0);
@@ -220,6 +219,7 @@ form :is(p, label) a:hover,
 
 .y-style {
     position: relative;
+    margin-top: 15%;
 }
 
 
@@ -313,17 +313,19 @@ form :is(p, label) a:hover,
         flex-direction: row;
         max-width: 50rem;
 
+
     }
 
     .signUp .content-heading .y-style {
         height: 100%;
         justify-content: space-between;
+
     }
 
     .content-form::before {
         transform: translate3d(-18%, -10%, 0);
         -webkit-transform: translate3d(-18%, -10%, );
-        height: 150%;
+
         width: 200%;
 
     }
@@ -344,8 +346,16 @@ form :is(p, label) a:hover,
     .wrapper>div {
         min-height: 100vh;
         display: block;
+        max-height: 70vh;
 
     }
+
+    .content-form::before {
+        height: 250%;
+
+    }
+
+
 
     .login .content-form {
         margin-top: 2%;
