--- a/trademart/src/MainApp/App/App.css
+++ b/trademart/src/MainApp/App/App.css
@@ -3,9 +3,10 @@
 :root {
     --poopin-font: 'Poppins', sans-serif;
     --main-color: #524fb7;
+    --primary-main: #488cf4;
     --dark-color: #100007;
     --white-color: #fff;
-    --orange-color: #ff5714;
+    --orange-color: #fd7e14;
     --orange-prim: #fe5d36;
     --gray-color: #f4f4f9;
     --blue: #1711d8;
