--- a/trademart/src/MainApp/WholesalersMain/Common/categories.css
+++ b/trademart/src/MainApp/WholesalersMain/Common/categories.css
@@ -1,7 +1,6 @@
 .flashHeader {
-   
     margin-left: 70px;
-    padding:0.92rem;
+    padding: 0.92rem;
 }
 
 
@@ -11,26 +10,26 @@
     flex-wrap: wrap;
     width: 100%;
     height: auto;
-
+    overflow-y: hidden;
 
 }
 
 .FlashCard {
-    background: #f6f9fc;
-    padding: 7px 0 10px 0;
-    border-radius: 20px;
+    background: #ededed;
+    display: inline-block;
+    border-radius: 12px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
-    width: 15%;
+    width: 12%;
     margin-bottom: 12px;
 }
 
 .fa-star {
-    color: #FFDF00;
+    color: #f6d70b;
 }
 
 .product {
     position: relative;
-    padding: 0 10px;
+    /* padding: 0 10px; */
     text-align: center;
 
 
@@ -38,10 +37,10 @@
 
 .FlashCard img {
     width: 100%;
-    object-fit: contain;
-    display: block;
-    padding: 0 10px;
-    border-radius: 20px 20px 0 0;
+    height: 100px;
+    display: inline-block;
+    padding: 0 2px;
+    border-radius: 10px 10px 0 0;
 
 }
 
@@ -52,33 +51,43 @@
 
 .product .visit-button {
     border: none;
-    font-size: 1rem;
+    font-size:0.7rem;
     color: var(--white-color);
     padding: 0.5rem 1rem;
-    background-color: var(--main-color);
+    background-color: var(--primary-main);
     border-radius: 0.375rem;
-    margin: 14px;
+    margin: 12px;
     position: relative;
-    top: 20%;
     cursor: pointer;
 }
 
 .product .visit-button:hover {
-    background-color: var(--green-color);
+    background-color: var(--orange-color);
 }
 
-
+.add-cart{
+    display:flex ;
+    justify-content: center;
+    align-items:center;
+}
 /* Media Query */
 
 @media screen and (max-width:1200px) {
     .FlashCard {
         width: 30%;
     }
+
+    .FlashCard img {
+        height: auto;
+    }
 }
 
 @media screen and (max-width:600px) {
     .FlashCard {
         width: 45%;
+    }
 
+    .FlashCard img {
+        height: auto;
     }
 }
