--- a/Grocery/grocery/src/index.css
+++ b/Grocery/grocery/src/index.css
@@ -3,3 +3,8 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+
+body {
+    font-family: 'Source Sans Pro', 'sans-serif';
+}
