feat: added background image for my css implemented resposive bg image

--- a/Grocery/grocery/src/Styles/login.css
+++ b/Grocery/grocery/src/Styles/login.css
@@ -1,4 +1,12 @@
-.login-bg{
-    background-image: url("../Assets/Images/collection-1.png");
-    
+.login-bg {
+    background-image: url("../Assets/Images/brocolli-1.png");
+
+}
+
+.line {
+    flex-grow: 1;
+    height: 1px;
+    background-color: #000;
+    margin: 0 10px;
+    outline: none;
 }
