feat: added landing page

--- a/Grocery/grocery/src/Styles/login.css
+++ b/Grocery/grocery/src/Styles/login.css
@@ -1,5 +1,5 @@
 .login-bg {
-    background-image: url("../Assets/Images/brocolli-1.png");
+    background-image: url("../Assets/Images/brocolli.png");
 
 }
 
