--- a/Grocery/grocery/src/index.css
+++ b/Grocery/grocery/src/index.css
@@ -7,5 +7,11 @@
 
 body {
     font-family: 'Source Sans Pro', 'sans-serif';
-    background-color: #214462;
+    
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: 0;
 }
